--- a/office works/intel.html
+++ b/office works/intel.html
@@ -3,6 +3,8 @@
 <head>
     <link rel="stylesheet" href="intel.css">
     <title> learn</title>
+    <!-- <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
 </head>
 
 <body>
@@ -80,7 +82,7 @@
         </div>
         <div class="other right">
             <div class="pods">
-                <img src="designs.png" alt="one stuff" class="rylo">
+                <img src="designs.jpg" alt="one stuff" class="rylo">
             </div>
             <div class="inner">
                 <img src="template.avif" alt="2nd template" class="wag">
@@ -100,7 +102,7 @@
         </div>
         <div class="other right">
             <div class="pods">
-                <img src="designs.png" alt="one stuff" class="rylo">
+                <img src="designs.jpg" alt="one stuff" class="rylo">
             </div>
             <div class="inner">
                 <img src="template.avif" alt="2nd template" class="wag">
@@ -120,11 +122,66 @@
         </div>
         <div class="other right">
             <div class="pods">
-                <img src="designs.png" alt="one stuff" class="rylo">
+                <img src="designs.jpg" alt="one stuff" class="rylo">
             </div>
             <div class="inner">
                 <img src="template.avif" alt="2nd template" class="wag">
             </div>
+        </div>
+    </div>
+    <div class="lowerpart">
+        <div>
+            <img src="designs.jpg" alt="nothing" class="rylo">
+        </div>
+        <div>
+            <h1>Frequently Asked Questions </h1>
+        </div>
+        <div>
+            <p> our design team helps clients acheive their marketing and </p>
+            <p> business goals through user-friendly</p>
+        </div>
+        <div>
+            <select >
+                <option value="Lorem ipsum dolor sit amet consectetur. add my word brooo
+                Vel ac aliquam dui enim est tellus.">brand design & Direction</option>
+            </select>
+        </div>
+        <br>
+        <div>
+            <select >
+                <option value="Lorem ipsum dolor sit amet consectetur. add my word brooo
+                Vel ac aliquam dui enim est tellus.">brand design & Direction</option>
+            </select>
+        </div>
+        <br>
+        <div>
+            <select >
+                <option value="Lorem ipsum dolor sit amet consectetur. add my word brooo
+                Vel ac aliquam dui enim est tellus.">brand design & Direction</option>
+            </select>
+        </div>
+        <br>
+        <div>
+            <select >
+                <option value="Lorem ipsum dolor sit amet consectetur. add my word brooo
+                Vel ac aliquam dui enim est tellus.">brand design & Direction</option>
+            </select>
+        </div>
+        <br>
+        <div>
+            <button> Contact me ~ it's Free </button>
+        </div>
+    </div>
+    <div>
+        <div>
+            <h1>Want to start </h1>
+            <h2> A Project</h2>
+        </div>
+        <div>
+            <i class="fa-solid fa-arrow-right"></i>
+            <button> Let's Talk 
+                <!-- <div class="circle"><i class='fas fa-angle-right'> </i> </div> -->
+            </button>
         </div>
     </div>
 </body>
