--- a/office works/intel.html
+++ b/office works/intel.html
@@ -4,7 +4,9 @@
     <link rel="stylesheet" href="intel.css">
     <title> learn</title>
     <!-- <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
+        integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
 </head>
 
 <body>
@@ -133,55 +135,69 @@
         <div>
             <img src="designs.jpg" alt="nothing" class="rylo">
         </div>
-        <div>
+        <div class="frequent">
             <h1>Frequently Asked Questions </h1>
         </div>
         <div>
             <p> our design team helps clients acheive their marketing and </p>
-            <p> business goals through user-friendly</p>
+            <p class="buss"> business goals through user-friendly</p>
         </div>
         <div>
-            <select >
+            <select class="sel">
                 <option value="Lorem ipsum dolor sit amet consectetur. add my word brooo
                 Vel ac aliquam dui enim est tellus.">brand design & Direction</option>
             </select>
         </div>
         <br>
         <div>
-            <select >
+            <select class="sel">
                 <option value="Lorem ipsum dolor sit amet consectetur. add my word brooo
                 Vel ac aliquam dui enim est tellus.">brand design & Direction</option>
             </select>
         </div>
         <br>
         <div>
-            <select >
+            <select class="sel">
+                <option class="sel" value="Lorem ipsum dolor sit amet consectetur. add my word brooo
+                Vel ac aliquam dui enim est tellus" .>brand design & Direction</option>
+            </select>
+        </div>
+        <br>
+        <div>
+            <select class="sel">
                 <option value="Lorem ipsum dolor sit amet consectetur. add my word brooo
                 Vel ac aliquam dui enim est tellus.">brand design & Direction</option>
             </select>
         </div>
         <br>
         <div>
-            <select >
-                <option value="Lorem ipsum dolor sit amet consectetur. add my word brooo
-                Vel ac aliquam dui enim est tellus.">brand design & Direction</option>
-            </select>
-        </div>
-        <br>
-        <div>
-            <button> Contact me ~ it's Free </button>
+            <button class="button"> Contact me ~ it's Free </button>
         </div>
     </div>
-    <div>
+    <div class="lowerpart">
         <div>
             <h1>Want to start </h1>
-            <h2> A Project</h2>
+            <h2 class="buss"> a Project?</h2>
         </div>
         <div>
             <i class="fa-solid fa-arrow-right"></i>
-            <button> Let's Talk 
+            <button class="button"> Let's Talk
                 <!-- <div class="circle"><i class='fas fa-angle-right'> </i> </div> -->
             </button>
+        </div>
+    </div>
+    <div class="grid-container foot">
+        <div>
+            <div class="over footer"> Work with Us </div>
+            <div class="job">adeniyipaul77@gmail.com</div>
+        </div>
+        <div>
+            <div class="over footer">follow us</div>
+            <div class="job">twitter behance linkedln </div>
+        </div>
+        <div>
+            <div class="over footer"> <img src="" alt="logo"></div>
+            <div class="job"> my template</div>
         </div>
     </div>
 </body>
