--- a/office works/intel.html
+++ b/office works/intel.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header">
         <div>
-            <img src="" alt="logo">
+            <img src="logo.jpg" alt="logo" class="logo">
         </div>
 
         <div>
@@ -196,7 +196,7 @@
             <div class="job">twitter behance linkedln </div>
         </div>
         <div>
-            <div class="over footer"> <img src="" alt="logo"></div>
+            <div class="over footer"> <img src="logo.jpg" alt="logo" class="logo"></div>
             <div class="job"> my template</div>
         </div>
     </div>
