--- a/Boostrap Project/weather app/index.html
+++ b/Boostrap Project/weather app/index.html
@@ -14,23 +14,22 @@
                     <div class="search mt-3">
                         <h1 class="text-center text-white">Weather App</h1>
                         <div class="search-head d-flex align align-items-center justify-items-center text-center mt-5">
-                            <input type="text" placeholder="Enter name of city"
-                                class=" pods rounded-pill ms-2 p-2 form-control">
+                            <input type="text" placeholder="Enter name of city" id="search" class="pods rounded-pill ms-2 p-2 form-control">
                             <div>
-                                <button class="air  rounded-pill p-1 m-1 form-control"><img src="images/search.png"
-                                        class="w-50 rounded-pill"></button>
+                                <button class="air  rounded-pill p-1 m-1 form-control" onclick="submit()"><img
+                                        src="images/search.png" class="w-50 rounded-pill"></button>
                             </div>
                         </div>
                         <div class="search-body text-center mt-5">
-                            <img src="images/rain.png" class=" weather-icon" width="130px">
+                            <img src="images/rain.png" id="weather-icon" width="130px">
                             <div class="text-white mt-3">
-                                <h1 class="temp">22°C</h1>
-                                <h2 class=" city  display-4 ">New york</h2>
+                                <h1 class="temp" id="temperature">22°C</h1>
+                                <h2 class="city display-4" id="city-name">New york</h2>
                                 <div class="details mt-5 d-flex align-items-center">
                                     <div class="col d-flex align-items-center ms-2">
-                                        <img src="images/humidity.png" width="30px" class="mb-3">
+                                        <img src="images/humidity.png" width="30px" class="mb-3" i>
                                         <div class="ms-2">
-                                            <p class="humidity mb-0">50%</p>
+                                            <p class="humidity mb-0" id="humdity">50%</p>
                                             <p>humdity</p>
                                         </div>
                                     </div>
@@ -51,6 +50,7 @@
         </div>
         <section>
 
+          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
             <script src="/Boostrap Project/bootstrap/js/bootstrap.js"></script>
             <script src="main.js"></script>
 </body>
